# rust-graphql-example

./: Cargo.toml  Makefile  README.md
migrations/: 20211210224745_create_initial_schema.sql
scripts/: start-db.sh  stop-db.sh
src/: db.rs  gql.rs  main.rs  model.rs
src/gql/: context.rs  mod.rs  schema.rs
src/graphql/: context.rs  mod.rs  schema.rs
