[package]
name = "rust-graphql-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.2"
envy = "0.4.2"
futures = "0.3.18"
juniper = "0.15.7"
juniper_hyper = "0.8.0"
serde = { version = "1.0.131", features = ["derive"] }
sqlx = { version = "0.5.9", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[features]
